fix bug z-index in orgchart

--- a/MainStyle.css
+++ b/MainStyle.css
@@ -1152,7 +1152,7 @@ button {
 }
 
 .boite{
-    z-index: 20;
+    z-index: 5;
 }
 
 .boite p {
@@ -1231,7 +1231,7 @@ button {
     display: flex;
     justify-content: center;
     height: 80px;
-    z-index: 10; 
+    z-index: 4; 
 }
 
 /* Ligne de connexion horizontale pour la boîte "informatique" */
@@ -1276,7 +1276,7 @@ button {
     font-weight: bold;
     color: white;
     transform: translate(-210%, -50%);
-    z-index: 10;
+    z-index: 4;
 }
 
 .conseil p {
